WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130921
Web Inspector: console.warn is showing as error instead of warning
https://bugs.webkit.org/show_bug.cgi?id=130921
Summary
Web Inspector: console.warn is showing as error instead of warning
Joseph Pecoraro
Reported
2014-03-28 17:16:23 PDT
I regressed this when I moved console to JavaScriptCore. We are accidentally reporting console.warn as MessageLevel::Error instead of MessageLevel::Warning. Take this opportunity to add a test, and update the fronted to use our enums instead of raw strings.
Attachments
[PATCH] Proposed Fix
(6.30 KB, patch)
2014-03-28 17:19 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-03-28 17:18:43 PDT
<
rdar://problem/16463548
>
Joseph Pecoraro
Comment 2
2014-03-28 17:19:05 PDT
Created
attachment 228098
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2014-03-28 17:31:05 PDT
Comment on
attachment 228098
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 228098 Committed
r166439
: <
http://trac.webkit.org/changeset/166439
>
WebKit Commit Bot
Comment 4
2014-03-28 17:31:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug