Web Inspector: console.warn is showing as error instead of warning https://bugs.webkit.org/show_bug.cgi?id=130921

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-03-28
Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* runtime/ConsolePrototype.cpp:
(JSC::consoleProtoFuncWarn):
console.warn should be MessageLevel Warning, not Error.

Source/WebInspectorUI:

* UserInterface/Models/DefaultDashboard.js:
(WebInspector.DefaultDashboard.prototype._incrementConsoleMessageType):
Use our enums instead of hardcoded strings.

LayoutTests:

Add a test for console.log, warn, error, etc to make sure they get
to the frontend with the expected source and level.

* inspector-protocol/console/console-message-expected.txt: Added.
* inspector-protocol/console/console-message.html: Added.

Canonical link: https://commits.webkit.org/148955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166439 268f45cc-cd09-0410-ab3c-d52691b4dbfc